# Python-FastAPI-

./: database.db  hello.py  index.html  main.py  pyproject.toml
FastAPi/: books.py  books2.py
FastAPi/TodoApp/: database.py  main.py  models.py  schema.py  todosapp.db
FastAPi/TodoApp/routers/: User.py  admin.py  auth.py  todos.py
modules/tasks/: controller.py  model.py  schema.py  service.py
modules/users/: controller.py  model.py  schema.py  service.py
util/: database.py
